Crash opening a file with with slotted action enabled #128490

Closed
opened 2024-10-02 18:18:58 +02:00 by Julien Duroure · 0 comments
Member

System Information
Operating system: Mint
Graphics card: Nvidia

Blender Version
Broken: 4.4 main db8790c685
Worked: 4.3 as it does not expose the experimental action slot feature

Short description of error
Open the file => Crash

Exact steps for others to reproduce the error

  • On 4.4 alpha, enable the experimental action slotted feature
  • Open the attached file (that was created with a previous slotted action version)

No crash when the experimental flag is OFF

PS: This file is part of automatic tests performed on glTF I/O

**System Information** Operating system: Mint Graphics card: Nvidia **Blender Version** Broken: 4.4 main db8790c68552cd7ff58288b8ae8450a1e2f70bd4 Worked: 4.3 as it does not expose the experimental action slot feature **Short description of error** Open the file => Crash **Exact steps for others to reproduce the error** - On 4.4 alpha, enable the experimental action slotted feature - Open the attached file (that was created with a previous slotted action version) No crash when the experimental flag is OFF PS: This file is part of automatic tests performed on glTF I/O
Julien Duroure added the
Severity
Normal
Type
Bug
Status
Needs Triage
labels 2024-10-02 18:18:59 +02:00
Sybren A. Stüvel added
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-10-02 18:27:40 +02:00
Sybren A. Stüvel self-assigned this 2024-10-02 18:27:48 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-10-03 09:40:38 +02:00
Alaska added the
Module
Animation & Rigging
label 2024-11-13 03:31:46 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#128490
No description provided.