Fix #128490: Crash opening a file with with slotted action enabled

The crash was caused by infinite recursion. When recursing into sub-strips
of an NLA strip, it helps to actually recurse with the pointer to that
sub-strip.

Pull Request: https://projects.blender.org/blender/blender/pulls/128492